--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "marked": "^0.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons": "^3.8.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
